# MadCO2

./: .gitmodules  CMakeLists.txt  README.md  co2gatherer.h  hidapi++.h  index.html  main.cpp  server.h
